<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_home"
        android:title="@string/my_profile"
        tools:targetApi="o">

    </item>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:title="Favorite"
        tools:targetApi="o">

    </item>


    <item android:title="@string/categories">
        <menu>
           <!-- <item
                android:id="@+id/changePassword"
                android:icon="@drawable/ic_change_password"
                android:title="@string/change_password"
                tools:targetApi="o">

            </item>-->
            <item
                android:id="@+id/theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/theme"
                tools:targetApi="o">

            </item>
        </menu>
    </item>

    <item android:title="@string/setting">
        <menu>

            <item
                android:id="@+id/contactUs"
                android:title="Contact Us">

            </item>
            <item
                android:id="@+id/about"
                android:title="About Us">

            </item>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"
                tools:targetApi="o">

            </item>
        </menu>
    </item>
</menu>

