<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PopularPostDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/trending_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/userImageShape"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:padding="2dp"
            android:src="@drawable/umbrella"
            android:theme="@style/userImageShape"
            app:strokeWidth="2dp"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:text="@string/user_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toEndOf="@+id/trending_image"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/post_date"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_date"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

        </TextView>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/postTitle"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageDetailListAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDetailListAdapter"
            tools:layout_editor_absoluteX="0dp">
            <ImageView
                android:layout_weight="0.3"
                android:src="@drawable/ic_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="TODO">
            </ImageView>
            <TextView
                android:hint="@string/favorite_text"
                android:layout_weight="1"
                android:id="@+id/favoriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <ImageView
                android:layout_weight="0.3"
                android:src="@drawable/ic_viewer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                >
            </ImageView>
            <TextView
                android:id="@+id/viewCount"
                android:hint="@string/view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:text="@string/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </TextView>
        </LinearLayout>
        <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linOne"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_favorite"
            android:text="@string/favorite"
            android:textAllCaps="false"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_favorite"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:text="@string/share"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_share"
            android:drawableStart="@drawable/ic_share"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>