<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LatestPostDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/latest_imageProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:padding="2dp"
            android:src="@drawable/umbrella"
            android:theme="@style/userImageShape"
            app:strokeWidth="2dp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:text="@string/user_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toEndOf="@+id/latest_imageProfile"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/posted_date"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_date"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp"/>



        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/postTitle"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageDetailListAdapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:layout_editor_absoluteX="34dp">

        </androidx.recyclerview.widget.RecyclerView>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDetailListAdapter"
            app:layout_constraintVertical_bias="0.152"
            tools:layout_editor_absoluteX="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="362dp" />

            <TextView
                android:id="@+id/favoriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/imageView2"
                android:hint="@string/favorite_text"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                tools:layout_editor_absoluteY="362dp">

            </TextView>
            <ImageView
                android:layout_toStartOf="@+id/viewCount"
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_viewer"
                tools:layout_editor_absoluteX="244dp"
                tools:layout_editor_absoluteY="365dp">

            </ImageView>

            <TextView
                android:layout_toStartOf="@+id/textView"
                android:id="@+id/viewCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/view_count"
                tools:layout_editor_absoluteY="370dp"/>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:layout_alignParentEnd="true"
                tools:layout_editor_absoluteX="354dp"
                tools:layout_editor_absoluteY="370dp"/>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="10dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_favorite"
                android:padding="10dp"
                android:text="@string/favorite"
                android:textAllCaps="false"
                app:icon="@drawable/ic_favorite"
                app:iconGravity="textStart">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_share"
                android:padding="5dp"
                android:text="@string/share"
                android:textAllCaps="false"
                app:icon="@drawable/ic_share"
                app:iconGravity="textStart">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>