<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">
        <ImageView
            android:id="@+id/latest_background_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/umbrella">
        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#99141414"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_marginTop="5dp"
                android:id="@+id/latest_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                style="@style/userImageShape"
                android:theme="@style/userImageShape"
                android:layout_marginStart="5dp"
                android:src="@drawable/umbrella">

            </com.google.android.material.imageview.ShapeableImageView>

            <TextView
                android:id="@+id/latest_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/latest_profile"
                android:text="@string/user_profile"
                android:textColor="@color/white">

            </TextView>
            <TextView
                android:id="@+id/timeCreate"
                android:layout_below="@+id/latest_userName"
                android:textColor="@color/white"
                android:text="@string/_1_2_2023"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/latest_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/latest_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latest_profile"
                android:maxLines="3"
                android:layout_marginStart="8dp"
                android:text="@string/user_post_two"
                android:textColor="@color/white">
            </TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>



